# krupton

./: .dockerignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierrc.cjs  README.md  TODO.md  docker-compose.yml  eslint.config.js  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.container/: README.md
.docker/: .dockerignore  build.sh  node24-base.Dockerfile
apps/py-predictor/: package.json  pyproject.toml  yoyo.ini
apps/py-predictor/postgres_migrations/: 0001_create_ml_tree_result.py  0002_create_ml_tree_artifact.py
apps/py-predictor/src/: __init__.py  __main__.py  context.py  main.py
apps/py-predictor/src/lib/: date.py  persistent_storage.py  rocks_db_log.py  test_persistent_storage.py  test_rocksdb_key.py  zeromq_subscriber.py
apps/py-predictor/src/lib/flink/: fcuk.py
apps/py-predictor/src/lib/postgres/: connection.py
apps/py-predictor/src/lib/worker/: messages.py  ring_buffer.py  ring_buffer_worker_example.py  shared_bytes.py  test_ring_buffer.py
apps/py-predictor/src/ml/: ensemble.py  feature_buffer.py  live_predictor.py  prediction_combiner.py  prediction_types.py  train_decision_tree.py  transformation_strategy.py
apps/py-predictor/src/parquet_query/: read_complete_kraken_window.py  read_series_as_columns.py
apps/py-predictor/src/postgres_entity/: ml_tree.py
apps/py-predictor/src/workers/export_workers/: rocksdb_windows_to_parquet.py
apps/py-predictor/src/workers/window_workers/: messages.py  window_workers.py
apps/py-predictor/src/workers/window_workers/order/: messages.py  order_book_accumulator.py  order_book_manager.py  order_window_worker.py
apps/py-predictor/src/workers/window_workers/trade/: messages.py  trade_window_soa.py  trade_window_worker.py
apps/py-predictor/test/: benchmark_rink_buffer_vs_ipc.py
apps/py-predictor/typings/rocksdb_binding/: __init__.py
dev/: ports.js
docs/: 000_links.md  001_repository architecture.md  006_sf_env.md  (+19 more)
(+382 files in other folders)
