[project]
name = "py-predictor"
version = "0.1.0"
description = "Python predictor service"
requires-python = ">=3.12"
dependencies = [
    "py-service-framework",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
py-service-framework = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

